--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,8 @@ dependencies = [
   "tqdm>=4.66",                     # прогресс-бары
   "rich>=13.7",                     # форматированный вывод
   "python-dateutil>=2.8",           # работа с датами
-  "ipython>=8.0"  # ✅ нужен для quantstats.reports
+  "ipython>=8.0",  # ✅ нужен для quantstats.reports
+  "plotly (>=6.3.0,<7.0.0)"
 ]
 
 [build-system]
